--- a/sauto.org/press8.html
+++ b/sauto.org/press8.html
@@ -63,6 +63,25 @@
                 </div>
             </div>
             <div id="content">
+                <!-- start video -->
+                        <div class="date">5.11.2013</div>
+			<div class="description">
+			    Первый муниципальный<br />
+                            О ходе подготовки к работе в осенне-зимний период<br />
+			</div>
+			<iframe width="480" height="360" src="//www.youtube.com/embed/P9Zr-hb4MyA" frameborder="0" allowfullscreen></iframe>                        
+			<br />
+		<!-- end video -->
+                <!-- start video -->
+                        <div class="date">25.10.2013</div>
+			<div class="description">
+			    ТРК Донбасс<br />
+                            Торжественное собрание посвященное<br />
+                            85 летию дорожного хозяйства в Донецкой области
+			</div>
+			<iframe width="480" height="360" src="//www.youtube.com/embed/Q-Vbjluunu0" frameborder="0" allowfullscreen></iframe>                        
+			<br />
+		<!-- end video -->
                 <!-- block smi -->
                 <div class="date">24.10.2013</div>
                 <div class="description">
